--- a/public/app/index.html
+++ b/public/app/index.html
@@ -1,15 +1,1 @@
-<html>
-
-<head>
-    <title>
-        Redis Monitor
-    </title>
-</head>
-
-<body>
-    <div>
-        This is index file
-    </div>
-</body>
-
-</html>
+index.html
